--- a/src/components/user/style.css
+++ b/src/components/user/style.css
@@ -18,9 +18,31 @@
     float:initial
 }
 .container{
-    margin: 2%;
+    margin: 20px;
  
 }
 .input-text{
     margin: 1%;
 }
+.avatar-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .input-text {
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    padding: 0.5rem;
+    box-sizing: border-box;
+    margin-bottom: 1rem;
+  }
+
+  .custom-avatar {
+    width: 300px; 
+    height: 200px; 
+    border-radius: 70%;
+    object-fit: cover; 
+  }
