--- a/src/components/post/style.css
+++ b/src/components/post/style.css
@@ -1,20 +1,16 @@
-.file-upload{
-    margin: 2%;
-    justify-content: flex-start;
-}
+
 .container{
     justify-content: center;
 }
 
 .p-button{
     color: whitesmoke;
-    background: var(--bluegray-400);
+    background: var(--bluegray-400) !important;
     border: var(--bluegray-400);
-}
-.p-button-label p-clickable{
 }
 .add-photo{
     margin: 1%;
+    background-color: gray !important;
 }
 .p-2{
     margin: 1%;
@@ -25,9 +21,10 @@
 .create-button{
  margin: 1%;
  float: left;
+ background-color: grey;
 }
 .d-block{
-    margin: 1%;
+    margin: 2%;
 }
 .input-header{
     margin: 1%;
