--- a/src/components/post/style.css
+++ b/src/components/post/style.css
@@ -1,28 +1,16 @@
 
 .container{
     justify-content: center;
+    margin: 1%;
 }
 
 .p-button{
-    color: whitesmoke;
     background: var(--bluegray-400) !important;
     border: var(--bluegray-400);
+    margin: 1%
 }
 
-.p-button:hover {
-    background-color: blue;
-}
-.add-photo{
-    margin: 1%;
-    background-color: gray !important;
-}
 
-.button-color{
-    background-color: red !important;
-}
-.button-color:hover{
-    background-color: black !important;
-}
 .p-2{
     margin: 1%;
 }
