--- a/src/components/user/style.css
+++ b/src/components/user/style.css
@@ -19,7 +19,6 @@
 }
 .container{
     margin: 4%;
- 
 }
 .input-text{
     margin: 1%;
@@ -41,8 +40,11 @@
   }
 
   .custom-avatar {
-    width: 300px; 
-    height: 200px; 
-    border-radius: 25px;
-    object-fit: cover; 
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50% !important;
   }
+.p-avatar-xl{
+    border-radius: 50% !important;
+}
